--- a/AUF.EMR.MVC/Views/Masterlist/SchoolAged.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/SchoolAged.cshtml
@@ -42,7 +42,7 @@
         <div class="overflow-x-auto">
             <table class="table-auto w-full">
                 <thead class="bg-gray-200">
-                    <tr class="bg-gray-200 text-sm">
+                    <tr class="text-sm hover-table-content transition duration-300 ease-in-out">
                         <th class="px-4 py-2 text-left">HH. NO/ Family Serial No.</th>
                         <th class="px-4 py-2 text-left">Name of Child</th>
                         <th class="px-4 py-2 text-left">Name of Mother</th>
