Fix login errors and initialize wra printing form

--- a/AUF.EMR.MVC/Areas/Identity/Pages/Account/Login.cshtml
+++ b/AUF.EMR.MVC/Areas/Identity/Pages/Account/Login.cshtml
@@ -8,7 +8,7 @@
 
 @if (Model.ErrorMessage != null)
 {
-    @await Html.PartialAsync("Popups/AlertError", Model.ErrorMessage);
+    @await Html.PartialAsync("Popups/_LoginError", Model.ErrorMessage);
 }
 
 <section class="flex items-center justify-center h-screen">
