--- a/AUF.EMR.MVC/Views/WRA/Index.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>List of Women of Reproductive Age and Adolescent Women for Family Planning Services</h1>
-<a asp-action="Print" class="btn btn-primary" asp-route-householdNo="@Model.HouseholdNo">Print</a>
+<button type="button" onclick="print('Print', 'WRA', @Model.HouseholdNo)">Print Pregnancy Tracking</button>
 <br />
 
 @Html.PartialAsync("_FormNav", Model.HouseholdNo).Result
@@ -129,3 +129,9 @@
 }
     </tbody>
 </table>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("Prints/_PrintDialog");
+    }
+}
