Fix is in school field for householdmembers bug

--- a/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
@@ -126,7 +126,7 @@
                             <label class="ms-2 text-sm font-medium text-gray-900">Out of School Youth</label>
                         </div>
                         <div class="flex items-center me-4">
-                            <input class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500" type="radio" asp-for="HouseholdMember.IsInSchool" value="null" />
+                            <input class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500" type="radio" asp-for="HouseholdMember.IsInSchool" value="" />
                             <label class="ms-2 text-sm font-medium text-gray-900">Not in School</label>
                         </div>
                     </div>
