--- a/AUF.EMR.MVC/Views/Masterlist/UnderFive.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/UnderFive.cshtml
@@ -60,37 +60,18 @@
                 <tbody>
                     @foreach (var item in Model.HouseholdMembers)
                     {
-                        <tr class="text-sm hover-table-content transition duration-300 ease-in-out">
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.Household.HouseholdNo)
-                            </td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.FormattedFullName)
-                            </td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.NameOfMother)
-                            </td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.NameOfFather)
-                            </td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.Household.FullAddress)
-                            </td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.Sex)
-                            </td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.Age)
-                            </td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.Birthday)
-                            </td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.IsNhts)
-                            </td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.IsInSchool)
-                            </td>
+                       <tr class="text-sm hover-table-content transition duration-300 ease-in-out">
+                            <td class="border-b border-gray-100 px-4 py-2 text-left"> @Html.DisplayFor(modelItem => item.Household.HouseholdNo)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.FormattedFullName)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.NameOfMother)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.NameOfFather)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Household.FullAddress)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Sex)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Age)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Birthday)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.IsNhts)</td>
+                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.IsInSchool)</td
+
                             <!--Action Button-->
                             <td class="border-b border-gray-100 px-4 py-2 text-left">
                                 <a asp-action="EditChildrenInfo" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="text-yellow-300 hover:text-yellow-400 mr-2">
