--- a/AUF.EMR.MVC/Views/WRA/Index.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>List of Women of Reproductive Age and Adolescent Women for Family Planning Services</h1>
-<button type="button" onclick="print('Print', 'WRA', @Model.HouseholdNo)">Print Pregnancy Tracking</button>
+<button type="button" onclick="print('Print', 'WRA', @Model.HouseholdNo)">Print WRA</button>
 <br />
 
 @Html.PartialAsync("_FormNav", Model.HouseholdNo).Result
